tap highlight and page overflow fixed

--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -590,6 +590,11 @@ video {
   }
 }
 
+:root {
+  overflow-x: hidden;
+  -webkit-tap-highlight-color: transparent;
+}
+
 textarea {
   resize: none;
 }
